# PracticeMechMorphogenesis

./: .gitignore  BASICDOC.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
